## @todo Emulate makefile options.

AUTOMAKE_OPTIONS = foreign

bin_PROGRAMS = iozone fileop pit_server
noinst_SCRIPTS = iozone3-run.sh
man_MANS = iozone.1

#AM_CPPFLAGS = 
#AM_LDFLAGS = 

fileop_SOURCES = src/current/fileop.c
pit_server_SOURCES = src/current/pit_server.c

iozone_SOURCES = src/current/libasync.c  src/current/libbif.c src/current/iozone.c 

